@@ -3,6 +3,7 @@ Revision history for Perl extension Text::Format.
 0.59
     - Add the missing README to the distribution (CPANTS).
     - Add a LICENSE file (CPANTS).
+    - Add a "=head1 LICENSE" section to the POD (CPANTS).
 
 0.58 Tue  4 Sep 23:04:11 IDT 2012
     - Apply a patch to correct a minor grammatical error:
